# linux-mass-production-tool-cpp

./: .gitattributes  CMakeLists.txt  README.md
src/: main.cpp
src/config/: config.cpp
src/display/: disp_manager.cpp  framebuffer.cpp
src/font/: font_manager.cpp  freetype.cpp
src/include/: config.hpp  disp_manager.hpp  font_manager.hpp  framebuffer.hpp  input_manager.hpp  page_manager.hpp  ui.hpp
src/input/: input_manager.cpp  net.cpp  touchscreen.cpp
src/page/: main_page.cpp  page_manage.cpp
src/ui/: button.cpp
